@@ -1,8 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
-  <mime-type type="text/x-nfo">
-    <sub-class-of type="text/x-readme"/>
-    <_comment>NFO document</_comment>
-    <glob pattern="*.nfo"/>
-  </mime-type>
-</mime-info>
