@@ -1,6 +1,5 @@
 [encoding: UTF-8]
 data/nfoview.desktop.in
-data/nfoview.xml.in
 data/preferences-dialog.glade
 nfoview/about.py
 nfoview/actions.py
