@@ -1,3 +1,9 @@
+2008-05-18  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* data/nfoview.xml.in: Remove.
+
+	* setup.py: Remove all mimetype file handling.
+
 2008-05-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* nfoview/__init__.py (__version__): Bump to 1.1.2.
